--- a/app/popup.html
+++ b/app/popup.html
@@ -27,7 +27,7 @@
                             <button tabindex="-1" @click="saveLinks" class="btn btn-sm btn-outline-primary" v-if="adding">Save Links</button>
                             <button tabindex="-1" @click="toggleEditing" class="btn btn-sm btn-outline-primary" v-if="adding">Cancel</button>
                         </div>
-                        <div style="width: 50%;" class="text-right">
+                        <div style="width: 50%;" class="text-right" v-if="urls.length">
                             <button tabindex="-1" @click="clearList" class="btn btn-sm btn-outline-primary" v-if="adding">Clear links</button>
                         </div>
                     </div>
@@ -49,7 +49,7 @@
                         <textarea tabindex="-1" class="form-control" v-model="urls"></textarea>
                     </div>
 
-                    <div class="col-md-4 mt-4 mt-md-0 d-flex" v-if="!adding">
+                    <div class="col-md-4 mt-4 mt-md-0 d-flex" v-if="!adding && dropdown.length">
 
                         <div class="btn-group" style="width: 50%">
                             <button tabindex="-1" @click="previous" class="btn btn-sm btn-outline-primary">Previous</button>
