--- a/app/popup.html
+++ b/app/popup.html
@@ -17,8 +17,10 @@
         <div class="container">
             <div class="row py-3">
 
-                <div class="col-12 mt-1 mt-md-0">
-                    <img src="images/selesti.svg" alt="Selesti">
+                <div class="col-4">
+                    <a href="https://www.selesti.com/slink?utm_source=slink" target="_blank">
+                        <img src="images/app-header-left.svg" alt="Slink by Selesti" style="height: 30px; width: auto;">
+                    </a>
                 </div>
 
                 <div class="col-md-4 mt-4 mt-md-0 d-flex">
@@ -75,6 +77,13 @@
                     </div>
 
                 </div>
+
+                <div class="col-12 mt-5">
+                    <a href="https://www.selesti.com/?utm_source=slink" target="_blank">
+                        <img src="images/app-header-right.svg" alt="Selesti Ltd" style="height: 30px; width: auto; border: 0;">
+                    </a>
+                </div>
+
             </div>
         </div>
     </toolbar>
